--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,14 +12,13 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #1976D2;
-$secondary : #26A69A;
-$accent    : #9C27B0;
+$primary: #d50000;
+$secondary: #303030;
+$accent: linear-gradient(249deg, #d50000 0%, #ff5252 57%);
 
-$dark      : #1D1D1D;
-$dark-page : #121212;
+$dark: #1d1d1d;
 
-$positive  : #21BA45;
-$negative  : #C10015;
-$info      : #31CCEC;
-$warning   : #F2C037;
+$positive: #d50000;
+$negative: #eb4411;
+$info: #ff1744;
+$warning: #f2c037;
